# conshomfold

./: .gitignore  Cargo.toml  README.md
assets/: ref_struct_of_pri_miR_16_2.fa  rnafold_homologs_of_pri_miR_16_2.fa
assets/rna_families/: bicoid_3_prime_utr_regulatory_elem.fa  ciliate_telomerase_rna.fa  coronavirus_3_prime_stem_loop_2_like_motif.fa  coronavirus_3_prime_utr_pseudoknot.fa  gammaretrovirus_core_encapsidation_signal.fa  hammerhead_ribozyme_type_1.fa  hammerhead_ribozyme_type_3.fa  hepatitis_delta_virus_ribozyme.fa  r2_rna_elem.fa  rna_3.fa  rnase_e_5_prime_utr_elem.fa  rnase_mrp.fa  rydc_rna.fa  vertebrate_telomerase_rna.fa  vimentin_3_prime_utr_protein_binding_region.fa  yrna.fa
assets/sampled_rna_families/: bicoid_3_prime_utr_regulatory_elem.fa  ciliate_telomerase_rna.fa  coronavirus_3_prime_stem_loop_2_like_motif.fa  gammaretrovirus_core_encapsidation_signal.fa  hammerhead_ribozyme_type_1.fa  hammerhead_ribozyme_type_3.fa  r2_rna_elem.fa  rna_3.fa  rnase_e_5_prime_utr_elem.fa  rnase_mrp.fa  vimentin_3_prime_utr_protein_binding_region.fa
src/: compile_rna_fams.py  get_comm_structs.py  get_stats_of_ss_estimation_programs.py  get_trna_prob_dists.py  lib.rs  main.rs  run_all.py  run_ss_estimation_programs.py  sample_rna_fams.py  utils.py
