[package]
name = "phylofold"
version = "0.1.1"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "PhyloFold Program, which Predicts RNA Single Secondary Structures to Incorporate Phylogeny among Homologs"
repository = "https://github.com/heartsh/phylofold"
readme = "README.md"
keywords = ["bioinformatics", "rna", "secondary-structure"]
license = "MIT"

[dependencies]
bio = "0.20"
num_cpus = "1.0"
phyloprob = "0.1"

[lib]
path = "src/lib.rs"
name = "phylofold"
