[package]
name = "consfold"
version = "0.1.2"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "ConsFold, which Predicts RNA Single Secondary Structures to Consider Sparse RNA Structural Alignments"
repository = "https://github.com/heartsh/consfold"
readme = "README.md"
keywords = ["bioinformatics", "rna", "secondary-structure"]
license = "MIT"

[dependencies]
bio = "0.20"
num_cpus = "1.0"
# consprob = "0.1"
consprob = {path = "../consprob"}

[lib]
path = "src/lib.rs"
name = "consfold"
