[package]
name = "conshomfold"
version = "0.1.0"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "ConsHomfold, which Predicts Global Single RNA Secondary Structures to Consider Sparse Global Pairwise RNA Structural Alignments"
repository = "https://github.com/heartsh/conshomfold"
readme = "README.md"
keywords = ["bioinformatics", "rna", "secondary-structure"]
license = "MIT"

[dependencies]
bio = "0.20"
num_cpus = "1.0"
consprob = "0.1"

[lib]
path = "src/lib.rs"
name = "conshomfold"
